<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/nav_hunt"
        android:icon="@drawable/ic_radar_hunt"
        android:title="@string/title_hunt" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_threat_map"
        android:title="@string/title_map" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_incident_logs"
        android:title="@string/title_logs" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
